--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,77 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+
+@layer base {
+    body {
+        font-family: 'Quicksand', Helvetica, sans-serif;
+    }
+    :root {
+        --color-background: #fafafa;
+        --color-middleground: #ededed;
+        --color-foreground: #ededed;
+        --color-brand: #43E896;
+        --color-text: #333;
+        --color-warning: #F4D217;
+        --color-error: #E84747;
+        --color-negative: #E84747;
+        --color-warning: #F4D217;
+        --color-text-light: whitesmoke;
+        --color-text-dark: #333;
+        --shadow: 0 1px 1px rgba(0,0,0,0.15), 0 2px 2px rgba(0,0,0,0.10), 0 4px 4px rgba(0,0,0,0.05);
+        --exanded-shadow: 0 7px 18px rgba(0,0,0,0.1), 0 4px 5px rgba(0,0,0,0.15);
+        --border-radius: .2em;
+    }
+}
+
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    list-style: none;
+}
+
+body, html{
+    padding: 0;
+    margin: 0;
+    font-size: 100%;
+    background: var(--color-background);
+    color: var(--color-text);
+    scroll-behavior: smooth;
+}
+
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+svg{
+    min-height: 25px;
+    min-width: 25px;
+}
+p a {
+    text-decoration: underline;
+}
+
+.zyppd-background{
+    background: rgb(67,232,150);
+    background: radial-gradient(
+    farthest-side at bottom left,
+    rgba(67,232,150,1), 
+    transparent
+    ),
+    radial-gradient(
+    farthest-corner at bottom right,
+    rgba(105, 50, 200, 1), 
+    rgba(67,232,150,1)
+    );
+
+}
+
+.zyppd__menu{
+    z-index: 40;
+    position: relative;
+}
