Update Select component

--- a/src/components/FormElements/FormElements.module.scss
+++ b/src/components/FormElements/FormElements.module.scss
@@ -7,10 +7,23 @@
 .needsEditing{
     &::before{
         content: 'Needs Updating';
-        @apply absolute py-1 px-2 right-2 rounded-t-md text-sm;
         top: -2px;
         transform: translate(0, -100%);
         background-color: var(--color-warning);
-        color: var(--color-text-dark)
+        color: var(--color-text-dark);
+        @apply absolute py-1 px-2 right-2 rounded-t-md text-sm;
     }
+}
+
+.select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
+    text-overflow: '';
+    &::-ms-expand {
+        display: none;
+    }
+}
+.select::-ms-expand {
+    display: none;
 }
